--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
             <!-- Колонка 2 – подкасты -->
             <div class="column">
 
-                <h3>🎙️ Подкасты «Говорим&nbsp;по&nbsp;делу» <br><small>(10:30 – 12:30)</small></h3>
+                <h3>🎙️ Подкасты «Говорим&nbsp;по&nbsp;делу» <br><small>(11:30 – 12:30)</small></h3>
 
                 <ul class="podcast-list">
                     <li><strong>ИИ в образовании</strong>: реальные практики ИТ и учителей</li>
@@ -496,7 +496,7 @@
       <li><strong>11:10–12:30 | TED‑style выступления</strong>
         <ul class="session-live">
           <li><span class="topic">Будущее школьного ИИ‑сервиса</span> — <span class="speaker">эксперты Яндекс Учебника</span></li>
-          <li><span class="topic">Метапредметность и фундаментальная информатика</span> — <span class="speaker">Босова Л. Л.</span></li>
+          <li><span class="topic">Метапредметность и фундаментальная информатика</span> — <span class="speaker">Босова А. Ю.</span></li>
           <li><span class="topic">Анализ данный</span> — <span class="speaker">Андрей Сиденко, учитель года</span></li>
           <li><span class="topic">Безопасность ИТ‑проектов в образовании</span> — <span class="speaker">1С, Астра, Киберпротект</span></li>
           <li><span class="topic">Интернет вещей и будущее ИТ</span> — <span class="speaker">ИТМО, МФТИ, МГПУ</span></li>
