--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
         <ul class="session-live">
           <li><span class="topic">Будущее школьного ИИ‑сервиса</span> — <span class="speaker">эксперты Яндекс Учебника</span></li>
           <li><span class="topic">Метапредметность и фундаментальная информатика</span> — <span class="speaker">Босова А. Ю.</span></li>
-          <li><span class="topic">Анализ данный</span> — <span class="speaker">Андрей Сиденко, учитель года</span></li>
+          <li><span class="topic">Анализ данных</span> — <span class="speaker">Андрей Сиденко, учитель года</span></li>
           <li><span class="topic">Безопасность ИТ‑проектов в образовании</span> — <span class="speaker">1С, Астра, Киберпротект</span></li>
           <li><span class="topic">Интернет вещей и будущее ИТ</span> — <span class="speaker">ИТМО, МФТИ, МГПУ</span></li>
         </ul>
