--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
                       <ul>
                         <li><strong>Роман Левин</strong>, Яндекс</li>
                         <li><strong>Тарас Метельский</strong>, директор Центра цифрового образования детей ИТ-куб (Чита, МБОУ гимназия №21)</li>
-                        <li><strong>Александр Расскащиков</strong>, студент ВШЭ (Бизнес-информатика), сотрудник ВКонтакте</li>
+                        <li><strong>Александр Расскащиков</strong>, студент ВШЭ (Бизнес-информатика), ИП</li>
                       </ul>
                     </div>
         
