--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                     Трек A — Информатика. Начало
                     <ul class="session-list">
                       <li><span class="session">Нейросеть: лайфхаки учителя</span> <span class="speaker">Яндекс Учебник</span></li>
-                      <li><span class="session">Питон — это нормально</span> <span class="speaker">Скрипачев Фёдор, учитель информатики</span></li>
+                      <li><span class="session">Математические основы информатики, которые нужны </span> <span class="speaker">Скрипачев Фёдор, учитель информатики</span></li>
                       <li><span class="session">Например, нейросети делают картинки</span> <span class="speaker">Босова Анна, Автор учебника, учитель информатики</span></li>
                     </ul>
                   </li>
