--- a/index.html
+++ b/index.html
@@ -515,11 +515,11 @@
                   
                     <div class="podcast-block">
                       <h4><strong>Вызовы цифрового будущего</strong> и образование 2030</h4>
-                      <p><strong>Ведущий:</strong> Денис Кононок</p>
+                      <p><strong>Ведущий:</strong> </p>
                       <ul>
                         <li><strong>Роман Левин</strong>, Яндекс</li>
                         <li><strong>Тарас Метельский</strong>, директор Центра цифрового образования детей ИТ-куб (Чита, МБОУ гимназия №21)</li>
-                        <li><strong>Александр Расскащиков</strong>, студент ВШЭ (Бизнес-информатика), ИП</li>
+                        <li><strong>Александр Рассказчиков</strong>, студент ВШЭ (Бизнес-информатика), ИП</li>
                       </ul>
                     </div>
         
